--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.sql.init.schema-locations=classpath:/schema.sql
 spring.sql.init.data-locations=classpath:/data.sql
+logging.level.ru.yandex.practicum.filmorate=DEBUG
 
 spring.h2.console.enabled=true
